# MShare

./: .gitignore  CMakeLists.txt  README.md  app.py
src/: .gitignore  ArgParser.cpp  ArgParser.hpp  Crypto.cpp  Crypto.hpp  CryptoContext.cpp  CryptoContext.hpp  Logger.cpp  Logger.hpp  MessageServer.cpp  MessageServer.hpp  Packet.cpp  Packet.hpp  main.cpp
src/mshare-cli/: MessageClient.cpp  MessageClient.hpp  main.cpp
src/mshared/: MessageServer.cpp  MessageServer.hpp  main.cpp
static/: main.js  style.css
templates/: index.html
